# Parallel_manipulators

./: .gitignore  README.md
DeltaRobot/: package.mo
DeltaRobot/Components/: Base.mo  GlobalParameters.mo  IdealActuatorPos.mo  IdealActuatorVel.mo  Parallelogram1.mo  PartialActuator.mo  PartialParallelogram.mo  Platform.mo  SphericalJoint.mo  ThreeArms_P1_IdealActVel.mo  package.mo  package.order
DeltaRobot/DataTables/: TorqueCommand.txt
DeltaRobot/Functions/: package.mo  package.order  parallelogramDirections.mo
DeltaRobot/Icons/: AxisControlBus_signalSelector.mo  Command.mo  Components.mo  DeltaRobot.mo  Disc.mo  Function.mo  Functions.mo  GlobalParameters.mo  IdealActuator.mo  IdealActuatorPos.mo  Interfaces.mo  Junction.mo  PickAndPlace.mo  Pose.mo  RefToBus.mo  ReferenceSignals.mo  Scenario.mo  SpeedCommand.mo  SphericalJoint.mo  StepTrajectory.mo  Switch2.mo  ThreeArms_IdealActVel.mo  TorqueCommand.mo  TrapezoidalTrajectory.mo  package.mo
DeltaRobot/Interfaces/: ControlBus_signalSelector.mo  Pose.mo  RefToBus.mo  package.mo  package.order
DeltaRobot/ReferenceSignals/: CubicTrajectory.mo  InverseKinematic.mo  (+5 more)
FMI/: CHANGELOG.md
Modelica_models/Test_FMI_C++/: .gitignore  CMakeLists.txt  FmiTest.mo  LICENSE.txt  README.md  buildfmi.mos  fmi_interface.cpp  fmi_interface.h  fmitest.cpp
Modelica_models/Test_FMI_C++/fmitest_project/: fmitest.cbp  fmitest.depend  fmitest.layout
Paper/: OOParallel.aux  OOParallel.bbl  OOParallel.bib  OOParallel.bib.bak  OOParallel.blg  OOParallel.synctex  OOParallel.tex
StewartPlatform/: Icons.mo  Interfaces.mo
(+417 files in other folders)
